Fixed text overflow with overflow:auto in the .css '.adjust' class.

--- a/site/mod2_solution/css/formats.css
+++ b/site/mod2_solution/css/formats.css
@@ -56,6 +56,7 @@ p {
     border: 3px solid black;
     margin: 15px;
     background-color: #6a6a6a;
+    overflow: auto;
 
 }
 
